# libnbt

./: CMakeLists.txt  LICENSE  README  TODO
example/: CMakeLists.txt  logger.h  main.c
include/: nbt.h
src/: error.c  nbt.c  nbterr.h  parse.c
